--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "version": "0.0.0",
+  "version": "0.1.3",
   "scripts": {
     "prepack": "rm -rf dist && bun build --minify --outdir dist src/index.ts && tsc",
     "post": "npm publish"
   },
   "devDependencies": {
+    "@types/node": "^22.7.4",
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.7"
   }
 }
