--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "haversine-distance": "^1.2.3"
   }
 }
